# CytoPy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AutoVsManual_Results.ipynb  AutoVsManual_Results.ipynb.REMOVED.git-id  Automated_Gating.ipynb  Automated_Gating_1.ipynb  Automated_Gating_2.ipynb  Automated_Gating_2.ipynb.REMOVED.git-id  Automated_Gating_Test.ipynb  CytoPy_environment.yml  Dockerfile  GatingExp_FMOKnn.ipynb  GatingExp_FMOKnn.ipynb.REMOVED.git-id  ILTIS_T_Gates.ipynb  README.md  Untitled1.ipynb  conda.yml  conda_env.yml  consensus.py.patch  docker-compose.yml  gate_editor.py  logo.png.REMOVED.git-id  pip.conf  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
CytoPy/: assay_tools.py  feedback.py  utilities.py
CytoPy.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
CytoPy2/: feedback.py  utilities.py
cytopy/: __init__.py  assay_tools.py  config.json  feedback.py  setup.py
data/: fcs_experiments.py  gating.py
docs/: environment.yml  requirements.txt
experiment_data/: .~lock.peritonitis_t_template.xlsx#  ILTIS_Nomenclature.xlsx  mononeutro_v2_mappings.xlsx  peritonitis_m_template.xlsx  peritonitis_t_template.xlsx  sepsis all FACS data 180812.xlsx
paper/: immunova_paper.aux  immunova_paper.bcf  immunova_paper.blg  immunova_paper.run.xml  immunova_paper.tex  references.bib
poster/: .~lock.POSTER.pptx#  Figure1.svg.REMOVED.git-id  POSTER.odp  POSTER.pdf.REMOVED.git-id  POSTER.ppt  POSTER.pptx  POSTER.pptx.REMOVED.git-id
tests/: classifier_test.py  clustering_test.py  (+15 more)
(+868 files in other folders)
