[tool.poetry]
name = "CytoPy"
version = "2.0.2"
description = "Data centric algorithm agnostic cytometry analysis framework"
authors = ["Ross Burton <burtonrj@cardiff.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29"
anytree = "^2.8"
detecta = "^0.0.5"
future = "^0.18"
graphviz = "^0.14"
h5py = "^2.10"
hdbscan = "^0.8"
harmonypy = "0.0.5"
imbalanced-learn = "^0.7"
ipython = "7.18.1"
KDEpy = "1.0.10"
loguru = "^0.5"
matplotlib = "^3.3"
mongoengine = "^0.20"
nbconvert = "^6.0"
networkx = "^2.5"
oauthlib = "^3.1.0"
openpyxl = "3.0.6"
pandas = "^1.1.2"
phate = "^1.0.4"
python-dateutil = "^2.8.1"
scikit-learn = "^0.24.1"
scikit-fda = "0.5"
scipy = "1.6.0"
scprep = "^1.0"
seaborn = "^0.11.0"
shapely = "1.7.1"
shap = "0.38.1"
sphinx = {version = "^3", optional = true}
snowballstemmer = "^2.0.0"
statsmodels = "^0.12"
autodocsumm = "^0.2.1"
tables = "^3.6.1"
tensorflow = "^2.4"
tqdm = "^4.49.0"
umap-learn = "^0.4.6"
xgboost = "^1.2.0"
xlrd = "^1.2.0"
yellowbrick = "^1.1"
FlowIO = "0.9.5"
MiniSom = "^2.2.6"
PhenoGraph = "^1.5.6"
pingouin = "^0.3.8"
setuptools = "^49.6.0"
uncertainties="^3.1"
flowutils = "0.9.3"

[tool.poetry.dev-dependencies]

jupyter = "^6"
mongomock = "^3.20.0"
pytest = "^6.0.2"
sphinx = "^3.2.1"
sphinx-theme = "^1.0"
sphinx-rtd-theme = "^0.4.3"

[tool.poetry.extras]
docs = ["sphinx"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
